Set Buttons width in all components of Admin

--- a/angular/src/app/admin/audit-logs/audit-log-detail-modal.component.html
+++ b/angular/src/app/admin/audit-logs/audit-log-detail-modal.component.html
@@ -145,7 +145,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" (click)="close()">{{"Close" | localize}}</button>
+                    <button type="button" class="btn btn-default btn-width" (click)="close()">{{"Close" | localize}}</button>
                 </div>
             </form>
         </div>
