--- a/angular/src/app/admin/audit-logs/audit-logs.component.html
+++ b/angular/src/app/admin/audit-logs/audit-logs.component.html
@@ -17,9 +17,9 @@
                         <tab heading="{{'OperationLogs' | localize}}">
                             <div class="row mb-2">
                                 <div class="col-sm-12 text-right">
-                                    <button type="button" class="btn btn-success" (click)="exportToExcelAuditLogs()"><i
+                                    <button type="button" class="btn btn-success btn-width" (click)="exportToExcelAuditLogs()"><i
                                             class="far fa-file-excel"></i> {{"ExportToExcel" | localize}}</button>
-                                    <button type="button" class="btn btn-primary" (click)="getAuditLogs()"><i
+                                    <button type="button" class="btn btn-primary btn-width" (click)="getAuditLogs()"><i
                                             class="fa fa-sync"></i> {{"Refresh" | localize}}</button>
                                 </div>
                             </div>
@@ -227,10 +227,10 @@
                         <tab heading="{{'ChangeLogs' | localize}}">
                             <div class="row mb-2">
                                 <div class="col-sm-12 text-right">
-                                    <button type="button" class="btn btn-success"
+                                    <button type="button" class="btn btn-success btn-width"
                                         (click)="exportToExcelEntityChanges()"><i class="far fa-file-excel"></i>
                                         {{"ExportToExcel" | localize}}</button>
-                                    <button type="button" class="btn btn-primary" (click)="getEntityChanges()"><i
+                                    <button type="button" class="btn btn-primary btn-width" (click)="getEntityChanges()"><i
                                             class="fa fa-sync"></i> {{"Refresh" | localize}}</button>
                                 </div>
                             </div>
