--- a/angular/src/app/admin/editions/edit-edition-modal.component.html
+++ b/angular/src/app/admin/editions/edit-edition-modal.component.html
@@ -26,8 +26,8 @@
                     </tabset>
                 </div>
                 <div class="modal-footer">
-                    <button [disabled]="saving" type="button" class="btn btn-secondary" (click)="close()">{{l("Cancel")}}</button>
-                    <button type="submit" class="btn btn-primary" [disabled]="!editionForm.form.valid" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')"><i class="fa fa-save"></i> <span>{{l("Save")}}</span></button>
+                    <button [disabled]="saving" type="button" class="btn btn-secondary btn-width" (click)="close()">{{l("Cancel")}}</button>
+                    <button type="submit" class="btn btn-primary btn-width" [disabled]="!editionForm.form.valid" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')"><i class="fa fa-save"></i> <span>{{l("Save")}}</span></button>
                 </div>
             </form>
         </div>
