--- a/angular/src/app/admin/install/install.component.html
+++ b/angular/src/app/admin/install/install.component.html
@@ -146,7 +146,7 @@
                         </div>
                         <div class="kt-portlet__foot">
                             <div class="kt-form__actions kt-form__actions--solid">
-                                <button id="SaveButton" class="btn btn-primary" [buttonBusy]="saving"
+                                <button id="SaveButton" class="btn btn-primary btn-width" [buttonBusy]="saving"
                                     [busyText]="l('SavingWithThreeDot')" (click)="saveAll()">Save</button>
                             </div>
                         </div>
