--- a/angular/src/app/admin/languages/language-texts.component.html
+++ b/angular/src/app/admin/languages/language-texts.component.html
@@ -70,7 +70,7 @@
                                         <input [(ngModel)]="filterText" name="filterText" autoFocus class="form-control"
                                             placeholder="{{'SearchWithThreeDot' | localize}}" type="text" autocomplete="off">
                                         <span class="input-group-btn">
-                                            <button (click)="applyFilters()" class="btn btn-primary" type="submit"><i
+                                            <button (click)="applyFilters()" class="btn btn-primary btn-width" type="submit"><i
                                                     class="icon-refresh"></i> {{"Refresh" | localize}}</button>
                                         </span>
                                     </div>
