--- a/angular/src/app/admin/organization-units/add-member-modal.component.html
+++ b/angular/src/app/admin/organization-units/add-member-modal.component.html
@@ -76,8 +76,8 @@
             </div>
 
             <div class="modal-footer">
-                <button [disabled]="saving" type="button" class="btn btn-secondary" (click)="close()">{{"Cancel" | localize}}</button>
-                <button class="btn btn-primary" (click)="addUsersToOrganizationUnit()" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')"><i class="fa fa-save"></i> <span>{{"Save" | localize}}</span></button>
+                <button [disabled]="saving" type="button" class="btn btn-secondary btn-width" (click)="close()">{{"Cancel" | localize}}</button>
+                <button class="btn btn-primary btn-width" (click)="addUsersToOrganizationUnit()" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')"><i class="fa fa-save"></i> <span>{{"Save" | localize}}</span></button>
             </div>
 
         </div>
