--- a/angular/src/app/admin/settings/host-settings.component.html
+++ b/angular/src/app/admin/settings/host-settings.component.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="kt-subheader__toolbar">
                     <div class="kt-subheader__wrapper">
-                        <button class="btn btn-primary" (click)="saveAll()"><i class="la la-floppy-o"></i>
+                        <button class="btn btn-primary btn-width" (click)="saveAll()"><i class="la la-floppy-o"></i>
                             {{"SaveAll" | localize}}</button>
                     </div>
                 </div>
