--- a/angular/src/app/admin/settings/tenant-settings.component.html
+++ b/angular/src/app/admin/settings/tenant-settings.component.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="kt-subheader__toolbar">
                     <div class="kt-subheader__wrapper">
-                        <button class="btn btn-primary" (click)="saveAll()"><i class="la la-floppy-o"></i>
+                        <button class="btn btn-primary btn-width" (click)="saveAll()"><i class="la la-floppy-o"></i>
                             {{"SaveAll" | localize}}</button>
                     </div>
                 </div>
@@ -51,9 +51,9 @@
                                             <span
                                                 class="form-text text-muted col-lg-12">{{"UploadLogo_Info" | localize}}</span>
                                         </div>
-                                        <button class="btn btn-primary" type="button"
+                                        <button class="btn btn-primary btn-width" type="button"
                                             (click)="uploadLogo()">{{"Upload" | localize}}</button>
-                                        <button class="btn btn-default" type="button"
+                                        <button class="btn btn-default btn-width" type="button"
                                             (click)="clearLogo()">{{"Clear" | localize}}</button>
                                     </form>
                                 </div>
@@ -70,9 +70,9 @@
                                             <span
                                                 class="form-text text-muted col-lg-12">{{"UploadCSS_Info" | localize}}</span>
                                         </div>
-                                        <button class="btn btn-primary" type="button"
+                                        <button class="btn btn-primary btn-width" type="button"
                                             (click)="uploadCustomCss()">{{"Upload" | localize}}</button>
-                                        <button class="btn btn-default" type="button"
+                                        <button class="btn btn-default btn-width" type="button"
                                             (click)="clearCustomCss()">{{"Clear" | localize}}</button>
                                     </form>
                                 </div>
