--- a/angular/src/app/admin/shared/permission-tree-modal.component.html
+++ b/angular/src/app/admin/shared/permission-tree-modal.component.html
@@ -17,7 +17,7 @@
                 <permission-tree #permissionTree></permission-tree>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
+                <button type="button" class="btn btn-default btn-width"
                     (click)="closePermissionTreeModal()">{{"Select" | localize}}</button>
             </div>
         </div>
