--- a/angular/src/app/admin/subscription-management/invoice/invoice.component.html
+++ b/angular/src/app/admin/subscription-management/invoice/invoice.component.html
@@ -69,7 +69,7 @@
                             <div class="kt-invoice__footer">
                                 <div class="kt-invoice__container kt-invoice__container--centered">
                                     <div class="kt-invoice__content">
-                                        <button type="button" class="btn btn-primary d-print-none print-btn"
+                                        <button type="button" class="btn btn-primary btn-width d-print-none print-btn"
                                             onclick="javascript:window.print();">{{("Print")}}</button>
                                     </div>
                                     <div class="kt-invoice__content">
