--- a/angular/src/app/admin/tenants/custom-tenants.component.html
+++ b/angular/src/app/admin/tenants/custom-tenants.component.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="kt-subheader__toolbar">
                     <div class="kt-subheader__wrapper">
-                        <button *ngIf="'Pages.Tenants.Create' | permission" class="btn btn-primary"
+                        <button *ngIf="'Pages.Tenants.Create' | permission" class="btn btn-primary btn-width"
                             (click)="createTenant()"><i class="fa fa-plus"></i>Creat plan</button>
                     </div>
                 </div>
