--- a/angular/src/app/admin/ui-customization/default-theme-ui-settings.component.html
+++ b/angular/src/app/admin/ui-customization/default-theme-ui-settings.component.html
@@ -189,7 +189,7 @@
 
     <button *ngIf="!('Pages.Administration.UiCustomization' | permission)"
             (click)="updateUiManagementSettings()"
-            class="btn btn-primary">
+            class="btn btn-primary btn-width">
         <i class="fa fa-save"></i> {{"Save" | localize}}
     </button>
 
