--- a/angular/src/app/admin/users/users.component.html
+++ b/angular/src/app/admin/users/users.component.html
@@ -281,10 +281,10 @@
             </div>
             <div class="kt-subheader__toolbar">
                 <div *ngIf="multiTenancySideIsTeanant" class="kt-subheader__wrapper">
-                    <button (click)="inviteUser()" class="btn btn-primary"><i class="fa fa-plus"></i>Invite User</button>
+                    <button (click)="inviteUser()" class="btn btn-primary btn-width"><i class="fa fa-plus"></i>Invite User</button>
                 </div>
                 <div class="kt-subheader__wrapper">
-                    <button (click)="createUser()" class="btn btn-primary"><i class="fa fa-plus"></i> {{"AddNew" | localize}}</button>
+                    <button (click)="createUser()" class="btn btn-primary btn-width"><i class="fa fa-plus"></i> {{"AddNew" | localize}}</button>
                 </div>
             </div>
         </div>
