--- a/angular/src/app/admin/languages/create-or-edit-language-modal.component.html
+++ b/angular/src/app/admin/languages/create-or-edit-language-modal.component.html
@@ -42,9 +42,9 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button [disabled]="saving" type="button" class="btn btn-default"
+                    <button [disabled]="saving" type="button" class="btn btn-default btn-width"
                         (click)="close()">{{"Cancel" | localize}}</button>
-                    <button type="submit" class="btn btn-primary" [disabled]="!editForm.form.valid"
+                    <button type="submit" class="btn btn-primary btn-width" [disabled]="!editForm.form.valid"
                         [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')"><i class="fa fa-save"></i>
                         <span>{{"Save" | localize}}</span></button>
                 </div>
