--- a/angular/src/app/admin/management/create-or-edit-timeManagement-modal.component.html
+++ b/angular/src/app/admin/management/create-or-edit-timeManagement-modal.component.html
@@ -23,8 +23,8 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button [disabled]="saving" type="button" class="btn btn-default" (click)="close()">{{l("Cancel")}}</button>
-                    <button type="submit" class="btn btn-primary blue" [disabled]="!timeManagementForm.form.valid" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')"><i class="fa fa-save"></i> <span>{{l("Save")}}</span></button>
+                    <button [disabled]="saving" type="button" class="btn btn-default btn-width" (click)="close()">{{l("Cancel")}}</button>
+                    <button type="submit" class="btn btn-primary blue btn-width" [disabled]="!timeManagementForm.form.valid" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')"><i class="fa fa-save"></i> <span>{{l("Save")}}</span></button>
                 </div>
             </form>
         </div>
