--- a/angular/src/app/admin/tenants/customized-plan-request.component.html
+++ b/angular/src/app/admin/tenants/customized-plan-request.component.html
@@ -83,7 +83,7 @@
                 </div>
                 <hr>
                 <div class="form-group margin-top-5 px-5">
-                    <button class="btn btn-brand" (click)="approveRequest()" type="submit" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
+                    <button class="btn btn-brand btn-width" (click)="approveRequest()" type="submit" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
                         <span>Send Email</span>
                     </button>
                 </div>
