--- a/angular/src/app/admin/tenants/tenant-features-modal.component.html
+++ b/angular/src/app/admin/tenants/tenant-features-modal.component.html
@@ -14,9 +14,9 @@
                     <feature-tree #featureTree></feature-tree>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" [disabled]="saving" [buttonBusy]="resettingFeatures" [busyText]="l('SavingWithThreeDot')" class="btn btn-default pull-left" (click)="resetFeatures()" [tooltipHtml]="l('ResetFeaturesTooltip')" placement="top"><span>{{"ResetSpecialFeatures" | localize}}</span></button>
-                    <button type="button" [disabled]="saving || resettingFeatures" class="btn btn-default" (click)="close()">{{"Cancel" | localize}}</button>
-                    <button type="submit" [disabled]="resettingFeatures" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')" class="btn btn-primary"><i class="fa fa-save"></i> <span>{{"Save" | localize}}</span></button>
+                    <button type="button" [disabled]="saving" [buttonBusy]="resettingFeatures" [busyText]="l('SavingWithThreeDot')" class="btn btn-default pull-left btn-width" (click)="resetFeatures()" [tooltipHtml]="l('ResetFeaturesTooltip')" placement="top"><span>{{"ResetSpecialFeatures" | localize}}</span></button>
+                    <button type="button" [disabled]="saving || resettingFeatures" class="btn btn-default btn-width" (click)="close()">{{"Cancel" | localize}}</button>
+                    <button type="submit" [disabled]="resettingFeatures" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')" class="btn btn-primary btn-width"><i class="fa fa-save"></i> <span>{{"Save" | localize}}</span></button>
                 </div>
             </form>
 
