Buttons width set for Accounts

--- a/angular/src/account/login/send-two-factor-code.component.html
+++ b/angular/src/account/login/send-two-factor-code.component.html
@@ -17,7 +17,7 @@
             </div>
 
             <div class="kt-form__actions">
-                <button type="submit" class="btn btn-primary btn-elevate kt-login__btn-primary">{{"Submit" | localize}}</button>
+                <button type="submit" class="btn btn-primary btn-width btn-elevate kt-login__btn-primary">{{"Submit" | localize}}</button>
             </div>
         </form>
     </div>
