--- a/angular/src/account/password/reset-password.component.html
+++ b/angular/src/account/password/reset-password.component.html
@@ -49,7 +49,7 @@
                             
                             <div class="kt-login__actions">
                                 <button type="submit" id="kt_login_signin_submit" [disabled]="!resetPassForm.form.valid"
-                                    class="btn btn-pill kt-login__btn-primary">{{"Submit" | localize}}</button>
+                                    class="btn btn-pill btn-width kt-login__btn-primary">{{"Submit" | localize}}</button>
                             </div>
                         </form>
                     </div>
