--- a/angular/src/account/email-activation/email-activation.component.html
+++ b/angular/src/account/email-activation/email-activation.component.html
@@ -14,8 +14,8 @@
             </div>
 
             <div class="kt-login__actions">
-                <button [disabled]="saving" routerLink="/account/login" type="button" class="btn btn-light btn-elevate kt-login__btn-secondary"><i class="fa fa-arrow-left"></i> {{"Back" | localize}}</button>
-                <button type="submit" class="btn btn-primary btn-elevate kt-login__btn-primary" [disabled]="!emailActivationForm.form.valid" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')"><i class="fa fa-check"></i> {{"Submit" | localize}}</button>
+                <button [disabled]="saving" routerLink="/account/login" type="button" class="btn btn-light btn-width btn-elevate kt-login__btn-secondary"><i class="fa fa-arrow-left"></i> {{"Back" | localize}}</button>
+                <button type="submit" class="btn btn-primary btn-width btn-elevate kt-login__btn-primary" [disabled]="!emailActivationForm.form.valid" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')"><i class="fa fa-check"></i> {{"Submit" | localize}}</button>
             </div>
         </form>
     </div>
