--- a/angular/src/account/register/select-edition.component.html
+++ b/angular/src/account/register/select-edition.component.html
@@ -64,14 +64,14 @@
                                 <div class="kt-pricing-1__btn">
 
                                     <button
-                                        class="btn btn-warning btn-pill  btn-brand btn-wide btn-uppercase btn-bolder btn-sm mx-2"
+                                        class="btn btn-warning btn-width btn-pill  btn-brand btn-wide btn-uppercase btn-bolder btn-sm mx-2"
                                         (click)="upgrade(editionWithFeatures.edition, editionPaymentType.Upgrade)"
                                         *ngIf="isUserLoggedIn">
                                         {{"Upgrade" | localize}}
                                     </button>
 
                                     <button
-                                        class="btn btn-success btn-pill  btn-brand btn-wide btn-uppercase btn-bolder btn-sm mx-2"
+                                        class="btn btn-success btn-width btn-pill  btn-brand btn-wide btn-uppercase btn-bolder btn-sm mx-2"
                                         [routerLink]="['/account/register-tenant']"
                                         [queryParams]="{editionId: editionWithFeatures.edition.id, subscriptionStartType: subscriptionStartType.Free}"
                                         href="#" *ngIf="!isUserLoggedIn && isFree(editionWithFeatures.edition)">
@@ -79,7 +79,7 @@
                                     </button>
 
                                     <button
-                                        class="btn btn-warning btn-pill  btn-brand btn-wide btn-uppercase btn-bolder btn-sm mx-2"
+                                        class="btn btn-warning btn-width btn-pill  btn-brand btn-wide btn-uppercase btn-bolder btn-sm mx-2"
                                         [routerLink]="['/account/register-tenant']"
                                         [queryParams]="{editionId: editionWithFeatures.edition.id, subscriptionStartType: subscriptionStartType.Trial}"
                                         href="#"
@@ -88,7 +88,7 @@
                                     </button>
 
                                     <button
-                                        class="btn btn-primary btn-pill  btn-brand btn-wide btn-uppercase btn-bolder btn-sm mx-2"
+                                        class="btn btn-primary btn-pill btn-width btn-brand btn-wide btn-uppercase btn-bolder btn-sm mx-2"
                                         [routerLink]="['/account/register-tenant']"
                                         [queryParams]="{editionId: editionWithFeatures.edition.id, subscriptionStartType: subscriptionStartType.Paid, editionPaymentType: editionPaymentType.NewRegistration}"
                                         href="#" *ngIf="!isUserLoggedIn && !isFree(editionWithFeatures.edition)">
