trial balance roll back fix.

--- a/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
+++ b/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
@@ -181,7 +181,7 @@
 
                                             </div>
                                         </div>
-                                        <div class="row align-items-center">
+                                        <div >
                                             <div class="categories-table primeng-datatable-container"
                                                 [busyIf]="primengTableHelper.isLoading">
                                                 <p-table #dataTable (onLazyLoad)="getAllImportLog($event)"
