--- a/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
+++ b/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
@@ -119,7 +119,7 @@
 
                                     <div class="col-md-6">
                                         <div *ngIf="linkAccountCheck" class="form-group category-selector">
-                                            <label for="TaskName">Link Account No</label>
+                                            <label for="TaskName">Link Account</label>
                                             <button  data-target="#kt_modal_KTDatatable_local" data-toggle="modal" type="button" class="btn btn-secondary" aria-haspopup="true"
                                                 aria-expanded="false">{{linkAccountNumber}}</button>
                                         </div>
