--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -303,7 +303,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="block-btn">
+                                    <div class="block-btn mr-1">
                                         <select class="form-control border-grey" name="categoryFilter"
                                             [(ngModel)]="accountTypeFilter" (change)="accountTypeClick($event)"
                                             id="exampleFormControlSelect2">
